--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.24.2",
+    "autoprefixer": "10.4.5",
+    "axios": "0.17.1",
+    "bootstrap": "^5.2.0-beta1",
+    "material-ui": "^0.20.2",
+    "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-social-login-buttons": "^3.6.1",
+    "validator": "9.2.0",
+    "web-vitals": "^2.1.4",
+    "zxcvbn": "4.4.2"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
